update recipe links in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
+        <li><a href="recipes/pressed_cuban_burger.html">Pressed Cuban Burger</a></li>
+      </ul>
+    
 </body>
 </html>
