--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin-recipes | Lasagna</title>
+    <title>Odin-recipes | Homemade Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Homemade Lasagna</h1>
+    <img src="../images/homemade_lasagna.jpg" alt="Homemade lasagna" width="500" height="600">
+    <h2>Description</h2>
+    <p>Making homemade lasagna much easier than it looks. 
+     You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>½ pound ground pork</li>
+            <li>½ pound lean ground beef</li>
+            <li>½ cup minced onion</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>1 (8 ounce) can tomato sauce</li>
+            <li>2 tablespoons chopped fresh parsley, divided</li>
+            <li>1 clove garlic, crushed</li>
+            <li>1 ½ teaspoons dried basil</li>
+            <li>1 ½ teaspoons salt</li>
+            <li>½ teaspoon dried oregano</li>
+            <li>⅛ teaspoon white sugar</li>
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound small-curd cottage cheese</li>
+            <li>¾ cup grated Parmesan cheese</li>
+            <li>3 large eggs</li>
+            <li>2 teaspoons salt</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>1 (16 ounce) package shredded mozzarella cheese</li>     
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Step 1</li>
+            <p>Combine pork and ground beef in a large, deep skillet over medium-high heat; 
+            cook and stir until browned and crumbly, 5 to 7 minutes. 
+            Add onion and cook until translucent, about 5 minutes.</p>
+              
+            <li>Step 2</li>
+            <p>Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley, garlic, basil, salt, 
+                oregano, and sugar. 
+                Reduce heat to medium-low and simmer, stirring occasionally, for 30 minutes.</p>
+            <li>Step 3</li>
+            <p>While the sauce is simmering, bring a large pot of lightly salted water to a boil. 
+               Cook lasagna noodles in the boiling water, stirring occasionally, 
+               until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</p>
+            <li>Step 4</li>
+            <p>While the noodles are cooking, preheat the oven to 375 degrees F (190 degrees C).</p>
+            <li>Step 5</li>
+            <p>Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh parsley, salt, and pepper in a large bowl until combined.</p>
+            <li>Step 6</li>
+            <p>Assemble lasagna: Spread a spoon or two of sauce over the bottom of 
+                a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. 
+                Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. 
+                Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. 
+                Cover the baking dish with aluminum foil.</p>
+            <li>Step 7</li>
+            <p>Bake in the preheated oven for 30 to 40 minutes.
+               Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</p>
+            <li>Step 8</li>
+            <p>Remove from the oven and let stand for 10 minutes before cutting and serving.</p>
+        </ol>
 </body>
 </html>
