--- a/recipes/pressed_cuban_burger.html
+++ b/recipes/pressed_cuban_burger.html
@@ -7,11 +7,12 @@
     <title>Odin-recipes | Pressed Cuban Burger</title>
 </head>
 <body>
-    <h1>Homemade Lasagna</h1>
-    <img src="../images/pressed_cuban_burger.jpg" alt="pressed_cuban_burger" width="500" height="600">
+    <h1>Pressed Cuban Burger</h1>
+    <img src="../images/pressed_cuban_burger.jpg" alt="pressed cuban burger" width="500" height="600">
     <h2>Description</h2>
-    <p>Making Pressed Cuban Burger much easier than it looks. 
-     You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:</p>
+    <p>Making Pressed Cuban Burger much easier than it looks. It is wholesome and truly satisfying.</p>
+    <p>This recipe takes about 5 minutes to prepare and 15 minutes to cook. 
+        This recipe is for 6 servings.We will itemize the Ingredients needed to make this recipe and the steps below.</p>
 
     <h2>Ingredients</h2>
         <ul> 
@@ -28,19 +29,14 @@
         </ul>
     <h2>Steps</h2>
         <ol>
-            <li>Step 1</li>
-            <p>In a small bowl, stir together the mayonnaise, lime juice and ground cumin. Set aside.</p>
-            <li>Step 2</li>
-            <p>In a medium bowl, combine the ground pork and grill seasoning. Form into 6 patties.</p>
-            <li>Step 3</li>
-            <p>Preheat a stovetop grill over medium-low heat. In a large nonstick skillet set over medium heat, cook the patties for 6 minutes per side. During the final 2 minutes, top each patty with an equal amount of ham and cheese. 
-                Cover the skillet and cook until the cheese melts.</p>
-            <li>Step 4</li>
-            <p>Spread the mayonnaise mixture on the cut sides of each roll. Place a patty on each roll bottom, 
-                top with 1/3 cup shredded lettuce, 3 pickles and set the roll top into place.</p>
-            <li>Step 5</li>
-            <p>Arrange the burgers on the grill. Weight the burgers using a heavy pan, such as a cast-iron skillet. Cook until crispy and grill marks appear, 1 to 2 minutes. 
-              Flip the burgers and repeat.</p>
+            <li>In a small bowl, stir together the mayonnaise, lime juice and ground cumin. Set aside.</li>
+            <li>In a medium bowl, combine the ground pork and grill seasoning. Form into 6 patties.</li>
+            <li>Preheat a stovetop grill over medium-low heat. In a large nonstick skillet set over medium heat, cook the patties for 6 minutes per side. During the final 2 minutes, top each patty with an equal amount of ham and cheese. 
+                Cover the skillet and cook until the cheese melts.</li>
+            <li>Spread the mayonnaise mixture on the cut sides of each roll. Place a patty on each roll bottom, 
+                top with 1/3 cup shredded lettuce, 3 pickles and set the roll top into place.</li>
+            <li>Arrange the burgers on the grill. Weight the burgers using a heavy pan, such as a cast-iron skillet. Cook until crispy and grill marks appear, 1 to 2 minutes. 
+              Flip the burgers and repeat.</li>
         </ol>
 </body>
 </html>
