--- a/recipes/easy_roasted_broccolli.html
+++ b/recipes/easy_roasted_broccolli.html
@@ -7,7 +7,7 @@
     <title>Odin-recipes | Pressed Cuban Burger</title>
 </head>
 <body>
-    <h1>Homemade Lasagna</h1>
+    <h1>Easy roasted Broccolli</h1>
     <img src="../images/easy-roasted-broccoli.jpg" alt="easy roasted broccoli" width="310" height="310">
     <h2>Description</h2>
     <p>Roasted broccoli is easy to make and has so much more flavor than boiled one. 
