--- a/recipes/easy_roasted_broccolli.html
+++ b/recipes/easy_roasted_broccolli.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin-recipes | Pressed Cuban Burger</title>
+    <title>Odin-recipes | Easy Roasted Broccolli<</title>
 </head>
 <body>
-    <h1>Easy roasted Broccolli</h1>
+    <h1>Easy Roasted Broccolli</h1>
     <img src="../images/easy-roasted-broccoli.jpg" alt="easy roasted broccoli" width="310" height="310">
     <h2>Description</h2>
     <p>Roasted broccoli is easy to make and has so much more flavor than boiled one. 
