--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin-recipe</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
         <li><a href="recipes/pressed_cuban_burger.html">Pressed Cuban Burger</a></li>
         <li><a href="recipes/easy_roasted_broccolli.html">Easy Roasted Broccolli</a></li>
-      </ul>
+    </ul>
     
 </body>
 </html>
