--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="main-nav">
         <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
         <li><a href="recipes/pressed_cuban_burger.html">Pressed Cuban Burger</a></li>
         <li><a href="recipes/easy_roasted_broccolli.html">Easy Roasted Broccolli</a></li>
