add container div to aid styling

--- a/recipes/easy_roasted_broccolli.html
+++ b/recipes/easy_roasted_broccolli.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Odin-recipes | Easy Roasted Broccolli<</title>
 </head>
 <body>
-    <h1>Easy Roasted Broccolli</h1>
-    <img src="../images/easy-roasted-broccoli.jpg" alt="easy roasted broccoli" width="310" height="310">
-    <h2>Description</h2>
-    <p>Roasted broccoli is easy to make and has so much more flavor than boiled one. 
-      My favorite part is the roasted sliced stem pieces. </p>
-    <p>This recipe takes about 10 minutes to prepare and 20 minutes to cook. 
-     This recipe is for 4 servings. We will itemize the Ingredients needed to make this recipe and the steps below.</p>
+    <div class="container">
+        <h1>Easy Roasted Broccolli</h1>
+            <img src="../images/easy-roasted-broccoli.jpg" alt="easy roasted broccoli">
+            <h2>Description</h2>
+                <p>Roasted broccoli is easy to make and has so much more flavor than boiled one. 
+                My favorite part is the roasted sliced stem pieces. </p>
+                <p>This recipe takes about 10 minutes to prepare and 20 minutes to cook. 
+                This recipe is for 4 servings. We will itemize the Ingredients needed to make this recipe 
+                and the steps below.
+                </p>
 
-    <h2>Ingredients</h2>
-        <ul> 
-            <li>14 ounces broccoli</li>
-            <li>1 tablespoon olive oil</li>
-            <li>salt and ground black pepper to taste</li>
-        </ul>
-    <h2>Steps</h2>
-        <ol>
-            <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
-            <li>Cut broccoli florets from the stalk. Peel the stalk and slice into 1/4-inch slices. 
-                Mix florets and stem pieces with olive oil in a bowl and transfer to a baking sheet; 
-                season with salt and pepper.</li>
-            <li>Roast in the preheated oven until broccoli is tender and lightly browned, 
-                about 18 to 20 minutes.</li>
-        </ol>
+            <h2>Ingredients</h2>
+                <ul> 
+                    <li>14 ounces broccoli</li>
+                    <li>1 tablespoon olive oil</li>
+                    <li>salt and ground black pepper to taste</li>
+                </ul>
+            <h2>Steps</h2>
+                <ol>
+                    <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
+                    <li>Cut broccoli florets from the stalk. Peel the stalk and slice into 1/4-inch slices. 
+                        Mix florets and stem pieces with olive oil in a bowl and transfer to a baking sheet; 
+                        season with salt and pepper.</li>
+                    <li>Roast in the preheated oven until broccoli is tender and lightly browned, 
+                        about 18 to 20 minutes.</li>
+                </ol>
+
+    </div>
+    
 </body>
 </html>
