--- a/recipes/pressed_cuban_burger.html
+++ b/recipes/pressed_cuban_burger.html
@@ -4,39 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Odin-recipes | Pressed Cuban Burger</title>
 </head>
 <body>
-    <h1>Pressed Cuban Burger</h1>
-    <img src="../images/pressed_cuban_burger.jpg" alt="pressed cuban burger" width="310" height="310">
-    <h2>Description</h2>
-    <p>Making Pressed Cuban Burger much easier than it looks. It is wholesome and truly satisfying.</p>
-    <p>This recipe takes about 5 minutes to prepare and 15 minutes to cook. 
-        This recipe is for 6 servings.We will itemize the Ingredients needed to make this recipe and the steps below.</p>
-
-    <h2>Ingredients</h2>
-        <ul> 
-            <li>½ cup mayonnaise</li>
-            <li>1 lime, juiced</li>
-            <li>1 tablespoon ground cumin</li>
-            <li>2 pounds ground pork</li>
-            <li>2 ½ teaspoons grill seasoning</li>
-            <li>6 ounces ham, thinly sliced</li>
-            <li>9 ounces Swiss cheese, thinly sliced</li>
-            <li>6 challah rolls, split</li>
-            <li>2 cups shredded iceberg lettuce</li>
-            <li>18 dill pickle slices</li>
-        </ul>
-    <h2>Steps</h2>
-        <ol>
-            <li>In a small bowl, stir together the mayonnaise, lime juice and ground cumin. Set aside.</li>
-            <li>In a medium bowl, combine the ground pork and grill seasoning. Form into 6 patties.</li>
-            <li>Preheat a stovetop grill over medium-low heat. In a large nonstick skillet set over medium heat, cook the patties for 6 minutes per side. During the final 2 minutes, top each patty with an equal amount of ham and cheese. 
-                Cover the skillet and cook until the cheese melts.</li>
-            <li>Spread the mayonnaise mixture on the cut sides of each roll. Place a patty on each roll bottom, 
-                top with 1/3 cup shredded lettuce, 3 pickles and set the roll top into place.</li>
-            <li>Arrange the burgers on the grill. Weight the burgers using a heavy pan, such as a cast-iron skillet. Cook until crispy and grill marks appear, 1 to 2 minutes. 
-              Flip the burgers and repeat.</li>
-        </ol>
+    <div class="container">
+        <h1>Pressed Cuban Burger</h1>
+        <img src="../images/pressed_cuban_burger.jpg" alt="pressed cuban burger">
+        <h2>Description</h2>
+            <p>Making Pressed Cuban Burger much easier than it looks. It is wholesome and truly satisfying.</p>
+            <p>This recipe takes about 5 minutes to prepare and 15 minutes to cook. 
+            This recipe is for 6 servings.We will itemize the Ingredients needed to make this recipe 
+            and the steps below.
+            </p>
+    
+        <h2>Ingredients</h2>
+            <ul> 
+                <li>½ cup mayonnaise</li>
+                <li>1 lime, juiced</li>
+                <li>1 tablespoon ground cumin</li>
+                <li>2 pounds ground pork</li>
+                <li>2 ½ teaspoons grill seasoning</li>
+                <li>6 ounces ham, thinly sliced</li>
+                <li>9 ounces Swiss cheese, thinly sliced</li>
+                <li>6 challah rolls, split</li>
+                <li>2 cups shredded iceberg lettuce</li>
+                <li>18 dill pickle slices</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>In a small bowl, stir together the mayonnaise, lime juice and ground cumin. Set aside.</li>
+                <li>In a medium bowl, combine the ground pork and grill seasoning. Form into 6 patties.</li>
+                <li>Preheat a stovetop grill over medium-low heat. In a large nonstick skillet set over medium heat, cook the patties for 6 minutes per side. During the final 2 minutes, top each patty with an equal amount of ham and cheese. 
+                    Cover the skillet and cook until the cheese melts.</li>
+                <li>Spread the mayonnaise mixture on the cut sides of each roll. Place a patty on each roll bottom, 
+                    top with 1/3 cup shredded lettuce, 3 pickles and set the roll top into place.</li>
+                <li>Arrange the burgers on the grill. Weight the burgers using a heavy pan, such as a cast-iron skillet. Cook until crispy and grill marks appear, 1 to 2 minutes. 
+                  Flip the burgers and repeat.</li>
+            </ol>
+    </div>
+    
 </body>
 </html>
