update file to fix navigation styling issues

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <title>Odin-recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="container home">
+    <h1>Odin's Recipes</h1>
     <ul class="main-nav">
         <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
         <li><a href="recipes/pressed_cuban_burger.html">Pressed Cuban Burger</a></li>
         <li><a href="recipes/easy_roasted_broccolli.html">Easy Roasted Broccolli</a></li>
     </ul>
-    
+    </div>
+    <hr class="footer-delimiter">
+    <div id="footer">
+        <footer>
+            <h3 class="footer-text">Joeyrocks Developers</h3>
+            <p class="footer-text">Copyright &copy;2022</p>
+        </footer>
+    </div>
 </body>
 </html>
