add page navigation and fix responsiveness issues

--- a/recipes/easy_roasted_broccolli.html
+++ b/recipes/easy_roasted_broccolli.html
@@ -8,6 +8,22 @@
     <title>Odin-recipes | Easy Roasted Broccolli<</title>
 </head>
 <body>
+    <header>
+        <h2 id="logo"><a href="../index.html">Odin's Recipes</a></h2>
+        <nav>
+            <ul class="page-nav">
+                <li class="page-nav-items">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="page-nav-items">
+                <a href="#">Comments</a>
+                </li>
+                <li class="page-nav-items">
+                    <button>Contribute to the Recipe</button>
+                </li>
+            </ul>
+        </nav>
+  </header>
     <div class="container">
         <h1>Easy Roasted Broccolli</h1>
             <img src="../images/easy-roasted-broccoli.jpg" alt="easy roasted broccoli">
@@ -36,6 +52,12 @@
                 </ol>
 
     </div>
-    
+    <hr>
+    <div class="footer-delimiter">
+        <footer>
+            <h3 class="footer-text">Joeyrocks Developers</h3>
+            <p class="footer-text">Copyright &copy;2022</p>
+        </footer>
+    </div>
 </body>
 </html>
