--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,22 @@
     <title>Odin-recipes | Homemade Lasagna</title>
 </head>
 <body>
+    <header>
+        <h2 id="logo"><a href="../index.html">Odins Recipes</a></h2>
+        <nav>
+            <ul class="page-nav">
+                <li class="page-nav-items">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="page-nav-items">
+                <a href="#">Comments</a>
+                </li>
+                <li class="page-nav-items">
+                    <button>Contribute to the Recipe</button>
+                </li>
+            </ul>
+        </nav>
+  </header>
     <div class="container">
         <h1>Homemade Lasagna</h1>
         <img src="../images/homemade_lasagna.jpg" alt="Homemade lasagna">
@@ -74,6 +90,12 @@
                 <li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
             </ol>
     </div>
-    
+    <hr>
+    <div class="footer-delimiter">
+        <footer>
+            <h3 class="footer-text">Joeyrocks Developers</h3>
+            <p class="footer-text">Copyright &copy;2022</p>
+        </footer>
+    </div>
 </body>
 </html>
