--- a/recipes/pressed_cuban_burger.html
+++ b/recipes/pressed_cuban_burger.html
@@ -8,6 +8,22 @@
     <title>Odin-recipes | Pressed Cuban Burger</title>
 </head>
 <body>
+    <header>
+        <h2 id="logo"><a href="../index.html">Odin's Recipes</a></h2>
+        <nav>
+            <ul class="page-nav">
+                <li class="page-nav-items">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="page-nav-items">
+                <a href="#">Comments</a>
+                </li>
+                <li class="page-nav-items">
+                    <button>Contribute to the Recipe</button>
+                </li>
+            </ul>
+        </nav>
+  </header>
     <div class="container">
         <h1>Pressed Cuban Burger</h1>
         <img src="../images/pressed_cuban_burger.jpg" alt="pressed cuban burger">
@@ -42,6 +58,13 @@
                 <li>Arrange the burgers on the grill. Weight the burgers using a heavy pan, such as a cast-iron skillet. Cook until crispy and grill marks appear, 1 to 2 minutes. 
                   Flip the burgers and repeat.</li>
             </ol>
+    </div>
+    <hr>
+    <div class="footer-delimiter">
+        <footer>
+            <h3 class="footer-text">Joeyrocks Developers</h3>
+            <p class="footer-text">Copyright &copy;2022</p>
+        </footer>
     </div>
     
 </body>
